prepare SealedTypesTest for -Drun.javac=enabled (#3204)
test infra structure:
+ prefer dynamic shouldRunJavac() over RUN_JAVAC where possible
+ add option to say "-Drun.javac=optIn" to let test classes opt in
   - classes opt in via new field runJavacOptIn
+ make initialization of excuse constants unconditional
+ update path detection for Java 9+ (no longer points to "/jre")
+ detect more service versions of recent java versions

let SealedClassesTest opt in to run.javac
+ add test & excuse concerning JDK-8343306